Fixed increasing covers to stay in shape add a certain size. added small animations and change theme color in the manifest

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,3 +21,25 @@ code {
 .headline {
   @apply font-highlight font-bold text-2xl text-medium-900;
 }
+
+.animation-wink {
+  animation: wink 500ms ease 0 infinite;
+}
+
+@keyframes wink {
+  0% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(25);
+  }
+  50% {
+    transform: rotate(-25);
+  }
+  75% {
+    transform: rotate(15);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
